--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -39,7 +39,9 @@ collections: # A list of collections the CMS should be able to edit
           - {label: "Contatti", name: contatti, widget: list, fields: [
               {label: "Titolo", name: "titolo", widget: "string"},
               {label: "Linea 1", name: "linea1", widget: "string"},
-              {label: "Linea 2", name: "linea2", widget: "string"},]}
+              {label: "Linea 2", name: "linea2", widget: "string"},
+              {label: "Icona", name: "icona", widget: "string"},
+              ]}
 
       # - file: "site/content/products/_index.md"
       #   label: "Products Page"
